--- a/staffview.ui
+++ b/staffview.ui
@@ -67,7 +67,7 @@ border-color: rgb(0, 0, 0);</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="layoutWidget1">
    <property name="geometry">
     <rect>
      <x>20</x>
