--- a/clientlogin.ui
+++ b/clientlogin.ui
@@ -79,28 +79,47 @@ background-color: rgb(255,255,255);</string>
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="loginButton">
+  <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>130</x>
      <y>220</y>
-     <width>101</width>
-     <height>25</height>
+     <width>168</width>
+     <height>28</height>
     </rect>
    </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QPushButton" name="loginButton">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
 background-color: rgb(0, 0, 0);
 font: 75 11pt &quot;DejaVu Sans Mono&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Login</string>
-   </property>
+      </property>
+      <property name="text">
+       <string>Login</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="backButton">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
+font: 75 11pt &quot;DejaVu Sans Mono&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Back</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <zorder>label</zorder>
   <zorder>label_2</zorder>
   <zorder>loginButton</zorder>
   <zorder>userName</zorder>
+  <zorder>backButton</zorder>
  </widget>
  <resources/>
  <connections/>
