--- a/stafflogin.ui
+++ b/stafflogin.ui
@@ -47,24 +47,6 @@ background-color: rgb(255,255,255);</string>
     <string>UserName :</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="loginButton">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>210</y>
-     <width>101</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(0, 0, 0);
-font: 75 11pt &quot;DejaVu Sans Mono&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Login</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="userName">
    <property name="geometry">
     <rect>
@@ -100,10 +82,47 @@ font: 75 11pt &quot;DejaVu Sans Mono&quot;;</string>
     <bool>false</bool>
    </property>
   </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>210</y>
+     <width>168</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QPushButton" name="loginButton">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
+font: 75 11pt &quot;DejaVu Sans Mono&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Login</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="backButton">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
+font: 75 11pt &quot;DejaVu Sans Mono&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Back</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
   <zorder>label_2</zorder>
   <zorder>label</zorder>
   <zorder>loginButton</zorder>
   <zorder>userName</zorder>
+  <zorder>backButton</zorder>
  </widget>
  <resources/>
  <connections/>
