--- a/editclientdetailsview.ui
+++ b/editclientdetailsview.ui
@@ -263,6 +263,25 @@ border-color: rgb(0, 0, 0);
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="prefButton">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>270</y>
+     <width>83</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+border-color: rgb(0, 0, 0);
+</string>
+   </property>
+   <property name="text">
+    <string>Preferences</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
